# pythontrio

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEMO.md  MCP_INTEGRATION.md  Makefile  README.md  RUFF_SETUP.md  alembic_merged.pptx  db_erd.mermaid  docker-compose.yml  pyproject.toml  pytest.ini  pythontrio.db  requirements-dev.txt  requirements.txt
.claude/agents/: architect-reviewer.md  architect.md  dev-reviewer.md  dev.md
alembic/: env.py
alembic/versions/: 84e1888c4531_asset_model.py  (+13 more)
app/: __init__.py  config.py  crud.py  database.py  exceptions.py  main.py  mcp_server.py  migration_utils.py  schemas.py
scripts/: README.md  __init__.py  api_client.py  config.py  requirements-sync.txt  sync.py  sync_prices.py
tasks/: 001-asset-price-history-plan.md  002-sync-prices-script-plan.md  003-portfolio-holdings-migration-plan.md  004-pytest-test-infrastructure-plan.md  004-transaction-patterns-plan.md  005-transaction-patterns-plan.md  006-user-profile-model-plan.md  007-cross-table-consistency-plan.md  009-user-onboarding-atomic-plan.md  010-mcp-fastmcp-read-tools.md  011-profile-status-state-machine-plan.md  012-admin-ui-reorganization-plan.md  013-optimistic-locking-plan.md  clean-architecture-refactor.txt  pattern-4-optimistic-locking-demo-plan.md  promt_sync_prices.txt
tasks_list/: 001_asset_price_history.md  002_reorganize_tests.md  003_refactor_schemas_and_tests.md  004_asset_price_sync.md  004_asset_price_sync__with_plan_mode.md  006_reorganize_sync_prices.md
tests/: README.md  __init__.py  conftest.py  test_cascades.py  test_crud.py
(+59 files in other folders)
